<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="16dp"
    android:layout_marginHorizontal="32dp"
    tools:context=".activity.CreateAccountActivity">

    <ImageView
        android:id="@+id/signUpIcon"
        android:layout_width="@dimen/signup_icon_height"
        android:layout_height="@dimen/signup_icon_height"
        android:layout_centerHorizontal="true"
        android:src="@drawable/sign_up"
        android:layout_marginVertical="@dimen/acc_activity_margin"/>

    <LinearLayout
        android:id="@+id/introText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpIcon"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_user_txt"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/intro_text_size"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_intro_text"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/intro_text_size2"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signup_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/acc_activity_margin"
        android:layout_below="@+id/introText"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id_hint_text"
            android:inputType="textEmailAddress"
            android:background="@drawable/rounded_corner"
            android:padding="@dimen/_16dp_dimen"
            android:layout_marginTop="12dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/pwd_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint_text"
            android:inputType="textPassword"
            android:background="@drawable/rounded_corner"
            android:padding="@dimen/_16dp_dimen"
            android:layout_marginTop="@dimen/_12dp_dimen"
            android:textSize="@dimen/_20sp_text_size" />

        <EditText
            android:id="@+id/confirm_pwd_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password_hint_text"
            android:inputType="textPassword"
            android:background="@drawable/rounded_corner"
            android:padding="@dimen/_16dp_dimen"
            android:layout_marginTop="@dimen/_12dp_dimen"
            android:textSize="@dimen/_20sp_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_acct_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_64dp_dimen"
            android:layout_marginTop="@dimen/_12dp_dimen"
            android:textSize="@dimen/_16sp_text_size"
            android:text="@string/create_account_text" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="@dimen/_24dp_dimen"
            android:layout_height="@dimen/_64dp_dimen"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_12dp_dimen"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@+id/signup_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_text"/>
        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textStyle="bold"/>
    </LinearLayout>
</RelativeLayout>