<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/_8dp_dimen"
    android:background="@drawable/rounded_corner"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/_12dp_dimen">

    <TextView
        android:id="@+id/note_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_4dp_dimen"
        android:text="@string/note_title_text"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sp_dimen" />

    <TextView
        android:id="@+id/note_content_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_4dp_dimen"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/content_of_the_notes_text"
        android:textSize="@dimen/_20sp_text_size" />

    <TextView
        android:id="@+id/note_timestamp_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:gravity="end"
        android:text="@string/note_timestamp_text"
        android:textSize="@dimen/_12sp_dimen" />
</LinearLayout>