<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myprimary"
    android:padding="@dimen/_16dp_dimen"
    tools:context=".activity.NoteDetailsActivity">

    <RelativeLayout
        android:id="@+id/title_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/new_note_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_note_txt"
            android:textColor="@color/white"
            android:textSize="@dimen/_32sp_dimen"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/save_note_btn"
            android:layout_width="@dimen/_35dp_dimen"
            android:layout_height="@dimen/_35dp_dimen"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/add_note" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar_layout"
        android:layout_marginVertical="@dimen/_26dp_dimen"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/_16dp_dimen">

        <EditText
            android:id="@+id/note_title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_8dp_dimen"
            android:hint="@string/title_text"
            android:padding="@dimen/_12dp_dimen"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp_dimen"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/content_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:gravity="top"
            android:hint="@string/content_text"
            android:minLines="15"
            android:padding="@dimen/_12dp_dimen"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp_text_size" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/delete_note_btn"
        android:layout_width="@dimen/_40dp_dimen"
        android:layout_height="@dimen/_40dp_dimen"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_15dp_dimen"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/delete_icon"
        android:visibility="gone" />
</RelativeLayout>